...
/// This setup is used for a UI test

@Reducer
struct NestedModal {
	@ObservableState
	struct State: Equatable, Identifiable {
		let modalLevel: Int
		let stackLevel: Int
		
		var id: Int {
			stackLevel
		}
		
		var nestedStack: NestedStack.State?
...
